Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -735,6 +735,13 @@
     window.host = 'readdy.ai';
 </script>
 <script src="https://static.readdy.ai/static/share.js"></script>
+    <a href="https://wa.me/201000000000" target="_blank" class="fixed bottom-6 left-6 z-50 flex items-center justify-center w-16 h-16 bg-[#25D366] rounded-full shadow-2xl hover:scale-110 transition-transform duration-300 group">
+    <i class="ri-whatsapp-line text-white text-4xl"></i>
+    <span class="absolute right-20 bg-white text-gray-800 px-4 py-2 rounded-lg text-sm font-bold shadow-md opacity-0 group-hover:opacity-100 transition-opacity duration-300 whitespace-nowrap pointer-events-none">
+        اطلب دواءك الآن
+    </span>
+</a>
 </body>
 </html>
+
 
