Change greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
-<head><script type="text/javascript" crossorigin="anonymous" async="" src="https://us-assets.i.posthog.com/static/array.js"></script><script src="https://static.readdy.ai/static/e.js"></script>
+<head><script type="text/javascript" crossorigin="anonymous" async="" src="https://us-assets.i.posthog.com/static/array.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>صيدلية دكتور محمد عصمت</title>
@@ -61,7 +61,7 @@
                 <div class="flex items-center gap-4">
                     <span class="flex items-center gap-2">
                         <i class="ri-phone-line"></i>
-                        +966 11 234 5678
+                        0 10 69446443
                     </span>
                     <span class="flex items-center gap-2">
                         <i class="ri-mail-line"></i>
@@ -735,7 +735,7 @@
     window.host = 'readdy.ai';
 </script>
 <script src="https://static.readdy.ai/static/share.js"></script>
-    <a href="https://wa.me/201000000000" target="_blank" class="fixed bottom-6 left-6 z-50 flex items-center justify-center w-16 h-16 bg-[#25D366] rounded-full shadow-2xl hover:scale-110 transition-transform duration-300 group">
+    <a href="https://wa.me/201069446443" target="_blank" class="fixed bottom-6 left-6 z-50 flex items-center justify-center w-16 h-16 bg-[#25D366] rounded-full shadow-2xl hover:scale-110 transition-transform duration-300 group">
     <i class="ri-whatsapp-line text-white text-4xl"></i>
     <span class="absolute right-20 bg-white text-gray-800 px-4 py-2 rounded-lg text-sm font-bold shadow-md opacity-0 group-hover:opacity-100 transition-opacity duration-300 whitespace-nowrap pointer-events-none">
         اطلب دواءك الآن
@@ -743,5 +743,6 @@
 </a>
 </body>
 </html>
+
 
 
