Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <!-- Logo -->
                 <div class="flex items-center gap-3">
                     <div class="w-12 h-12 flex items-center justify-center bg-yellow-400 rounded-full">
-                        <i class="ri-capsule-fill text-2xl text-primary"></i>
+                          <img src="assets/images/logo.png" alt="لوجو صيدلية دكتور محمد عصمت" class="w-full h-full object-cover">
                     </div>
                     <div>
                         <h1 class="text-2xl font-bold">دكتور محمد عصمت</h1>
@@ -492,7 +492,7 @@
                 </div>
                 <div class="text-center">
                     <div class="relative inline-block">
-                        <img src="https://readdy.ai/api/search-image?query=Professional%20male%20pharmacist%20in%20white%20coat%20smiling%20confidently%2C%20middle-aged%20Arabic%20doctor%20with%20friendly%20expression%2C%20clean%20pharmacy%20background%2C%20professional%20healthcare%20portrait%2C%20warm%20lighting%2C%20trustworthy%20appearance&amp;width=400&amp;height=400&amp;seq=doctor001&amp;orientation=squarish" alt="دكتور محمد عصمت" class="w-80 h-80 rounded-full object-cover object-top border-8 border-white/20 mx-auto">
+                         <img src="assets/images/Dr.Esmat.png" alt="لوجو صيدلية دكتور محمد عصمت" class="w-full h-full object-cover">
                         <div class="absolute -bottom-4 -right-4 bg-yellow-400 text-primary rounded-full p-4">
                             <i class="ri-user-heart-fill text-2xl"></i>
                         </div>
@@ -605,7 +605,7 @@
                         </div>
                         <div class="flex items-center gap-3">
                             <i class="ri-phone-line text-yellow-400"></i>
-                            <span class="text-white/80">+201069000004</span>
+                            <span class="text-white/80">⁦+20 10 69446443⁩</span>
                         </div>
                         <div class="flex items-center gap-3">
                             <i class="ri-mail-line text-yellow-400"></i>
@@ -728,11 +728,8 @@
             web_vitals: false,
         },
         rageclick: false,
-    })
-    window.shareKey = 'Fs9w7aGeaOVOdl7IfgKNSQ';
-    window.host = 'readdy.ai';
-</script>
-<script src="https://static.readdy.ai/static/share.js"></script>
+    
+
     <a href="https://wa.me/201069446443" target="_blank" class="fixed bottom-6 left-6 z-50 flex items-center justify-center w-16 h-16 bg-[#25D366] rounded-full shadow-2xl hover:scale-110 transition-transform duration-300 group">
     <i class="ri-whatsapp-line text-white text-4xl"></i>
     <span class="absolute right-20 bg-white text-gray-800 px-4 py-2 rounded-lg text-sm font-bold shadow-md opacity-0 group-hover:opacity-100 transition-opacity duration-300 whitespace-nowrap pointer-events-none">
@@ -745,3 +742,4 @@
 
 
 </body></html>
+
