--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <!-- Logo -->
                 <div class="flex items-center gap-3">
                     <div class="w-12 h-12 flex items-center justify-center bg-yellow-400 rounded-full">
-                          <img src="assets/images/logo.png" alt="لوجو صيدلية دكتور محمد عصمت" class="w-full h-full object-cover">
+                          <img src="logo.png" alt="لوجو صيدلية دكتور محمد عصمت" class="w-full h-full object-cover">
                     </div>
                     <div>
                         <h1 class="text-2xl font-bold">دكتور محمد عصمت</h1>
@@ -492,7 +492,7 @@
                 </div>
                 <div class="text-center">
                     <div class="relative inline-block">
-                         <img src="assets/images/Dr.Esmat.png" alt="لوجو صيدلية دكتور محمد عصمت" class="w-full h-full object-cover">
+                         <img src="Dr.Esmat.png" alt="دكتور محمد عصمت" class="w-full h-full object-cover">
                         <div class="absolute -bottom-4 -right-4 bg-yellow-400 text-primary rounded-full p-4">
                             <i class="ri-user-heart-fill text-2xl"></i>
                         </div>
@@ -742,4 +742,5 @@
 
 
 </body></html>
+
 
