Update print statement to show 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                 </div>
                 <div class="text-center">
                     <div class="relative inline-block">
-                         <img src="Dr.Esmat.png" alt="دكتور محمد عصمت" class="w-full h-full object-cover">
+                        <img src="Dr.Esmat.png" alt="دكتور محمد عصمت" class="w-32 h-32 object-cover rounded-full">
                         <div class="absolute -bottom-4 -right-4 bg-yellow-400 text-primary rounded-full p-4">
                             <i class="ri-user-heart-fill text-2xl"></i>
                         </div>
@@ -547,7 +547,7 @@
                 <div>
                     <div class="flex items-center gap-3 mb-6">
                         <div class="w-12 h-12 flex items-center justify-center bg-yellow-400 rounded-full">
-                            <i class="ri-capsule-fill text-2xl text-primary"></i>
+                              <img src="logo.png" alt="لوجو صيدلية دكتور محمد عصمت" class="w-full h-full object-cover">
                         </div>
                         <div>
                             <h3 class="text-xl font-bold">دكتور محمد عصمت</h3>
@@ -742,5 +742,6 @@
 
 
 </body></html>
+
 
 
