--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html lang="ar" dir="rtl"><head><script type="text/javascript" crossorigin="anonymous" async="" src="https://us-assets.i.posthog.com/static/array.js"></script><script type="text/javascript" crossorigin="anonymous" async="" src="https://us-assets.i.posthog.com/static/array.js"></script>
+<html lang="ar" dir="rtl">
+    <head><script type="text/javascript" crossorigin="anonymous" async="" src="https://us-assets.i.posthog.com/static/array.js"></script>
+        <script type="text/javascript" crossorigin="anonymous" async="" src="https://us-assets.i.posthog.com/static/array.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>صيدلية دكتور محمد عصمت</title>
@@ -741,7 +743,8 @@
 <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
 <a href="https://wa.me/201069446443" target="_blank"
-   class="fixed bottom-6 left-6 z-[9999] w-16 h-16 flex items-center justify-center bg-[#25D366] rounded-full shadow-2xl hover:scale-110 transition-transform duration-300 group">
+   class="fixed bottom-6 left-6 w-16 h-16 flex items-center justify-center bg-[#25D366] rounded-full shadow-2xl hover:scale-110 transition-transform duration-300 group"
+   style="z-index: 99999 !important;">
    
    <i class="ri-whatsapp-line text-white text-4xl"></i>
    
@@ -757,14 +760,18 @@
   if (waBtn) {
     waBtn.style.display = 'flex';
     waBtn.style.position = 'fixed';
-    waBtn.style.zIndex = '9999';
+    waBtn.style.bottom = '1.5rem'; // يحدد المسافة من أسفل الشاشة
+    waBtn.style.left = '1.5rem';   // يحدد المسافة من الجهة اليسرى
+    waBtn.style.zIndex = '99999';  // رفع قيمة z-index لتأكيد ظهوره فوق كل العناصر
   }
 </script>
 
 
 
 
+
 </body></html>
+
 
 
 
