Change 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -95,11 +95,13 @@
                 
                 <!-- Actions -->
                 <div class="flex items-center gap-4">
-                    <div class="relative">
-                        <input type="text" placeholder="ابحث عن دواء..." class="bg-white/20 border border-white/30 rounded-full px-4 py-2 pr-10 text-white placeholder-white/70 focus:outline-none focus:bg-white/30 w-64">
-                        <div class="absolute right-3 top-1/2 transform -translate-y-1/2 w-5 h-5 flex items-center justify-center">
-                            <i class="ri-search-line text-white/70"></i>
-                        </div>
+                   <div class="relative">
+    <input type="text" id="searchInput" onkeyup="startSearch()" placeholder="ابحث عن دواء..." class="bg-white/20 border border-white/30 rounded-full px-4 py-2 pr-10 text-white placeholder-white/70 focus:outline-none focus:bg-white/30 w-64">
+    <div class="absolute right-3 top-1/2 transform -translate-y-1/2 w-5 h-5 flex items-center justify-center">
+        <i class="ri-search-line text-white/70"></i>
+    </div>
+    <div id="resultsBox" class="absolute top-full right-0 w-full bg-white mt-2 rounded-lg shadow-xl z-50 overflow-hidden" style="display: none; max-height: 250px; overflow-y: auto;"></div>
+</div>
                     </div>
                     <button class="relative p-2 hover:bg-white/20 rounded-full transition-colors">
                         <div class="w-6 h-6 flex items-center justify-center">
@@ -747,38 +749,46 @@
   }
 </script>
 <script>
-        function startSearch() {
-            const word = document.getElementById('searchInput').value.toLowerCase();
-            const resultsBox = document.getElementById('resultsBox');
+function startSearch() {
+    const query = document.getElementById('searchInput').value.toLowerCase().trim();
+    const resultsBox = document.getElementById('resultsBox');
 
-            if (word.length < 2) {
-                resultsBox.style.display = 'none';
-                return;
+    if (query.length < 2) {
+        resultsBox.style.display = 'none';
+        return;
+    }
+
+    fetch('medicines.json')
+        .then(res => res.json())
+        .then(data => {
+            const filtered = data.filter(item => item.name.toLowerCase().includes(query));
+            
+            if (filtered.length > 0) {
+                resultsBox.style.display = 'block';
+                resultsBox.innerHTML = filtered.map(item => `
+                    <div onclick="window.open('https://wa.me/201069446443?text=طلب دواء: ${item.name}', '_blank')" 
+                         class="flex items-center p-3 border-b border-gray-100 hover:bg-gray-50 cursor-pointer text-gray-800">
+                        <img src="${item.image}" onerror="this.src='https://cdn-icons-png.flaticon.com/512/822/822143.png'" class="w-8 h-8 ml-3 object-contain">
+                        <div class="flex-grow text-right">
+                            <div class="font-bold text-sm">${item.name}</div>
+                            <div class="text-xs text-teal-600">${item.price} ج.م</div>
+                        </div>
+                    </div>
+                `).join('');
+            } else {
+                resultsBox.style.display = 'block';
+                resultsBox.innerHTML = '<div class="p-3 text-center text-gray-400 text-sm">غير موجود</div>';
             }
+        });
+}
 
-            fetch('medicines.json')
-                .then(res => res.json())
-                .then(data => {
-                    const filtered = data.filter(drug => drug.name.toLowerCase().includes(word));
-                    if (filtered.length > 0) {
-                        resultsBox.style.display = 'block';
-                        resultsBox.innerHTML = filtered.map(drug => `
-                            <div class="flex items-center p-3 border-b hover:bg-gray-50 cursor-pointer">
-                                <img src="${drug.image}" class="w-10 h-10 object-contain ml-3">
-                                <div class="flex-grow text-right">
-                                    <b class="text-primary block text-sm">${drug.name}</b>
-                                    <small class="text-gray-500">${drug.category}</small>
-                                </div>
-                                <div class="font-bold text-secondary text-sm">${drug.price} ج.م</div>
-                            </div>
-                        `).join('');
-                    } else {
-                        resultsBox.style.display = 'block';
-                        resultsBox.innerHTML = '<div class="p-4 text-center text-gray-400">غير موجود</div>';
-                    }
-                }).catch(err => console.error("تأكد من وجود ملف medicines.json"));
-        }
-    </script>
+// إغلاق قائمة البحث عند الضغط خارجها
+document.addEventListener('click', (e) => {
+    if (!e.target.closest('.relative')) {
+        document.getElementById('resultsBox').style.display = 'none';
+    }
+});
+</script>
 </body>
 
 
