--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
                         resultsBox.style.display = 'block';
                         resultsBox.innerHTML = '<div class="p-4 text-center text-gray-400">غير موجود</div>';
                     }
-                }).catch(err => console.error("تأكد من وجود ملف medicines.json"));
+                }).catch(err => console.error("medicines.json"));
         }
     </script>
 </body>
@@ -769,6 +769,7 @@
 
 
 </body></html>
+
 
 
 
