--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@ function startSearch() {
         return;
     }
 
-    fetch('medicines.json')
+    fetch('https://raw.githubusercontent.com/username/repo/main/medicines.json')
         .then(res => res.json())
         .then(data => {
             const filtered = data.filter(drug =>
@@ -800,6 +800,7 @@ function startSearch() {
 
 
 </body></html>
+
 
 
 
