--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@ function startSearch() {
 }
 </script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
+<script>
    var swiper = new Swiper(".mySwiper", {
     slidesPerView: 1, // عرض صورة واحدة فقط
     spaceBetween: 0,  // إلغاء الفراغات بين الصور
@@ -863,12 +863,13 @@ function startSearch() {
         prevEl: ".swiper-button-prev",
     },
 });
-
+</script>
 
 
 
 
 </body></html>
+
 
 
 
