--- a/index.html
+++ b/index.html
@@ -33,163 +33,120 @@
         align-items: center;
         justify-content: center;
     }
-
-    /* الحاوية الكبرى */
-    .carousel-container {
+.carousel-section {
         width: 100%;
-        max-width: 1100px;
+        padding: 60px 0;
+        background: #f5f5f5;
+        overflow: hidden;
+    }
+
+    .carousel-container {
+        width: 95%;
+        max-width: 1200px;
+        margin: 0 auto;
         background: linear-gradient(to bottom, #e8e8e8 0%, #ffffff 50%, #f0f0f0 100%);
         border-radius: 20px;
-        padding: 100px 20px;
+        padding: 80px 20px;
         position: relative;
-        overflow: hidden; /* لمنع خروج الصور عن الإطار */
         box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
     }
 
-    /* الاسم الخافت في الخلفية */
     .site-name {
         position: absolute;
-        top: 60px;
+        top: 40px;
         left: 50%;
         transform: translateX(-50%);
-        font-size: 6rem;
+        font-size: 4rem;
         font-weight: 900;
-        color: rgba(150, 160, 180, 0.1); /* شفافية عالية جداً */
-        letter-spacing: 10px;
+        color: rgba(150, 160, 180, 0.1);
         z-index: 1;
         white-space: nowrap;
-        text-transform: uppercase;
         pointer-events: none;
     }
 
-    /* منطقة الصور */
     .carousel-wrapper {
         position: relative;
-        height: 450px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        perspective: 1200px; /* العمق الثلاثي الأبعاد */
+        height: 400px;
+        perspective: 1200px;
         z-index: 2;
-    }
-
-    .carousel-track {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        transform-style: preserve-3d;
         display: flex;
-        justify-content: center;
         align-items: center;
+        justify-content: center;
     }
 
-    /* تنسيق البطاقة الموحد */
     .carousel-item {
         position: absolute;
-        width: 280px; /* عرض البطاقة */
-        height: 380px; /* طول البطاقة */
+        width: 260px;
+        height: 360px;
         transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
-        border-radius: 20px;
+        border-radius: 15px;
         overflow: hidden;
         background: white;
-        box-shadow: 0 20px 40px rgba(0,0,0,0.2);
-        opacity: 0; /* إخفاء باقي الصور غير النشطة */
+        box-shadow: 0 15px 30px rgba(0,0,0,0.2);
+        opacity: 0;
         transform: scale(0.5) translateZ(-500px);
+        visibility: hidden;
     }
 
     .carousel-item img {
         width: 100%;
         height: 100%;
-        object-fit: cover; /* لضمان عدم تمطط الصور */
+        object-fit: cover;
     }
 
-    /* الحالة النشطة (الوسطى) */
+    /* توزيع العناصر بالتوالي */
     .carousel-item.active {
         opacity: 1;
+        visibility: visible;
         z-index: 10;
         transform: translateX(0) scale(1) translateZ(100px);
     }
 
-    /* الحالة التالية (اليمين) */
     .carousel-item.next-1 {
         opacity: 0.8;
+        visibility: visible;
         z-index: 5;
-        transform: translateX(250px) scale(0.8) rotateY(-25deg);
-        filter: blur(1px) grayscale(30%);
+        transform: translateX(220px) scale(0.8) rotateY(-20deg);
     }
 
-    /* الحالة السابقة (اليسار) */
     .carousel-item.prev-1 {
         opacity: 0.8;
+        visibility: visible;
         z-index: 5;
-        transform: translateX(-250px) scale(0.8) rotateY(25deg);
-        filter: blur(1px) grayscale(30%);
+        transform: translateX(-220px) scale(0.8) rotateY(20deg);
     }
 
-    /* البطاقات البعيدة (اختياري لزيادة العمق) */
     .carousel-item.next-2 {
         opacity: 0.4;
+        visibility: visible;
         z-index: 2;
-        transform: translateX(400px) scale(0.6) rotateY(-35deg);
-    }
-    .carousel-item.prev-2 {
-        opacity: 0.4;
-        z-index: 2;
-        transform: translateX(-400px) scale(0.6) rotateY(35deg);
+        transform: translateX(380px) scale(0.6) rotateY(-30deg);
     }
 
-    /* أزرار التنقل */
+    .carousel-item.prev-2 {
+        opacity: 0.4;
+        visibility: visible;
+        z-index: 2;
+        transform: translateX(-380px) scale(0.6) rotateY(30deg);
+    }
+
     .carousel-nav {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
         z-index: 100;
-        background: rgba(13, 115, 119, 0.7); /* لونك الرئيسي */
+        background: #0d7377;
         color: white;
         border: none;
         width: 45px;
         height: 45px;
         border-radius: 50%;
         cursor: pointer;
-        font-size: 20px;
-        transition: 0.3s;
     }
+    .prev-btn { left: 15px; }
+    .next-btn { right: 15px; }
 
-    .carousel-nav:hover { background: #14a085; transform: translateY(-50%) scale(1.1); }
-    .prev-btn { left: 10px; }
-    .next-btn { right: 10px; }
-
-    /* المعلومات السفلية */
-    .footer-info {
-        text-align: center;
-        margin-top: 30px;
-    }
-
-    .footer-info h3 {
-        font-size: 1.5rem;
-        color: #0d7377;
-        margin-bottom: 5px;
-    }
-
-    .footer-info p { color: #718096; }
-
-    /* واتساب والأنيميشن */
-    .floating-whatsapp {
-        position: fixed;
-        bottom: 20px;
-        left: 20px;
-        width: 60px;
-        height: 60px;
-        background-color: #25D366;
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        z-index: 1000;
-        animation: bounce 2s infinite;
-    }
-    @keyframes bounce { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
-</style>
+    </style>
     <script>
        // 1. تعريف العناصر الأساسية
 const items = document.querySelectorAll('.carousel-item');
@@ -1132,6 +1089,7 @@ function startSearch() {
 
 
 </body></html>
+
 
 
 
